cabal-version:      2.4
name:               haskell-project
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Franklin Chua
maintainer:         franklin.chua@fireclay.ph

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable haskell-project
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.16.0.0, 
        haskell-say ^>=1.0.0.0, 
        ansi-terminal ^>=0.11.3, 
        random, 
        mtl, 
        pdf-toolbox-core ^>=0.1.1, 
        pdf-toolbox-document ^>=0.1.2,
        directory,
        split,
        text,
        text-replace
    hs-source-dirs:   app
    default-language: Haskell2010
